fix(TriviaCard): fix screen reader for statistics + statistic overflow

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_themeUtilities.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_themeUtilities.scss
@@ -33,6 +33,7 @@
 .border-grey { border: 4px solid $stockport-grey !important; }
 .border-one-stockport-purple { border: 4px solid $one-stockport-purple !important; }
 
+.border-colour-default { border-color: $stockport-teal-darker !important; }
 .border-colour-teal { border-color: $stockport-teal-darker !important; }
 .border-colour-green { border-color: $stockport-green !important; }
 .border-colour-pink { border-color: $stockport-pink !important; }
