--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_trivia.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_trivia.scss
@@ -119,6 +119,10 @@
         display: block;
     }
 
+    &__statistic {
+        overflow-wrap: break-word;
+    }
+
     &__body {
         color: $stockport-black;
 
